# projeto-senai-ml

./: 404.html  README.md  index.html  pyproject.toml
config/: config.yaml  index.html
config_loader/: index.html
data/: dataset_teste.csv  dataset_treino.csv
data_generation/: index.html
data_preparation/: index.html
evaluation/: index.html
main/: index.html
model_first/: index.html
model_visualization/: index.html
models/: boat_price_prediction_model.pkl
search/: search_index.json
src/: data_generation.py  data_preparation.py  evaluation.py  main.py  model_first.py  model_visualization.py
